--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,22 @@
     <title>Homework 11</title>
   </head>
   <body>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
+
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
+
+    <button type="button" class="load-more is-hidden">Load more</button>
+
     <script src="index.js" type="module"></script>
   </body>
 </html>
